--- a/bibliography.bib
+++ b/bibliography.bib
@@ -421,9 +421,13 @@ year={2015}
 	Volume = {37},
 	Year = {2007}}
 
-@misc{nanork,
-	Title = {{nano-RK Sensor RTOS. http://nanork.org}}}
-
+@article{nanork,
+	Author = {{nano-RK}},
+	Journal = {http://nanork.org},
+	Title = {{nano-RK Sensor RTOS, Carnegie Mellon University}},
+	Year = {2007}
+	}
+	
 @article{tinyos,
 	Author = {J. Hill and R. Szewczyk and A. Woo and S. Hollar and D. Culler and K. Pister},
 	Journal = {ASPLOS},
@@ -435,6 +439,7 @@ year={2015}
 	Publisher = {FORTH Inc},
 	Title = {FORTH Programmer's Handbook},
 	Year = 2007}
+}
 
 @article{spartan3,
 	Author = {Xilinx},
@@ -683,6 +688,14 @@ year={2015}
 
 @misc{sdv_website,
 	Title = {Simulink Design Verifier 1.5. Mathworks}}
+
+@article{leads,
+ author={B. Fuertes and J. Toquero},
+ title="{Pacemaker Lead Displacement: Mechanisms And Management}",
+ journal={Indian Pacing Electrophysiology Journal},
+ volume={},
+ year={2003}
+}
 
 @article{icd,
 	Author = {S.J. Saxonhouse and J.B. Conti and A.B. Curis},
